mystuff/bin/buildlog.txt
Output dir: C:\Users\todd\OneDrive\Documents\GitHub\C64-Projects\mystuff\bin
parsing
Got 593 errors and 0 warnings while executing:
  (C:\Users\todd\OneDrive\Documents\GitHub\C64-Projects\mystuff\aquarium.asm 5:13) Error: Syntax error
  (C:\Users\todd\OneDrive\Documents\GitHub\C64-Projects\mystuff\aquarium.asm 242:12) Error: Syntax error
  (C:\Users\todd\OneDrive\Documents\GitHub\C64-Projects\mystuff\aquarium.asm 283:12) Error: Syntax error
  (C:\Users\todd\OneDrive\Documents\GitHub\C64-Projects\mystuff\aquarium.asm 337:12) Error: Syntax error
  (C:\Users\todd\OneDrive\Documents\GitHub\C64-Projects\mystuff\aquarium.asm 371:12) Error: Syntax error
  ...

.byte $0B,$08,$EF,$00,$9E,$32,$30,$36
.byte $31,$00,$00,$00
   sei
   inc $d030Q
            ^

Error: Syntax error
at line 5, column 13 in aquarium.asm


